kubernetes/django-oscar/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-oscar
  namespace: legacy-modernization
  labels:
    app: django-oscar
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: django-oscar
