kubernetes/django-oscar/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-oscar
  namespace: legacy-modernization
  labels:
    app: django-oscar
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - django-oscar.legacy.gov
      secretName: django-oscar-tls
  rules:
    - host: django-oscar.legacy.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-oscar
                port:
                  name: http
